# api-book

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  schemas.py
tests/: conftest.py  test_api_routes.py
